--- a/templates/index.html
+++ b/templates/index.html
@@ -8,20 +8,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/stilos.css">
 </head>
-<body>
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg navbar-light bg-secondary ">
                      
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="navbar-toggler-icon"></span>
-                    </button> <a class="navbar-brand" href="#">Mis Documentos</a>
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <span class="navbar-toggler-icon"> </span>
+                       
+                    </button><img src="/img/STC_Metro.webp" alt="" width="20%">  <a class="navbar-brand"  href="#">   Mis Documentos</a>
+                    
+                    <div  class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
-                                 <a class="nav-link" href="#">Emviar A<span class="sr-only">(Actual)</span></a>
+                                 <a class="nav-link" style="text-align:right"  href="#">Emviar A<span class="sr-only">(Actual)</span></a>
                             </li>
                             <li class="nav-item">
                                  <a class="nav-link" href="#">Salir</a>
@@ -29,33 +32,79 @@
                             
                         </ul>
                        
-                        <ul class="navbar-nav ml-md-auto">
-                            <li class="nav-item active">
-                                 <a class="nav-link" href="#">Rodear a<span class="sr-only">(Actual)</span></a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown">enlace desplegable</a>
-                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                     <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a> <a class="dropdown-item" href="#">Something else here</a>
-                                    <div class="dropdown-divider">
-                                    </div> <a class="dropdown-item" href="#">Separated link</a>
-                                </div>
-                            </li>
-                        </ul>
                     </div>
                 </nav>
-                <div class="jumbotron">
-                    <h2>
-                        MI METRO CDMX
-                        l
-                    </h2>
-                    <p>
-                        <a class="btn btn-primary btn-large" href="#">Iniciar</a>
-                    </p>
                 </div>
+
+
+                
             </div>
+            <div class="container-fluid">
+        
+<BR></BR>
+            <table>
+                <TR>
+                    <TD rowspan="2"  class="col-md-6">
+                 
+                      <<div  class="jumbotron jumbotron-fluid" >
+                        
+                       <center>
+                        <h4 >INFORMACION </h4>
+                        <img src="/img/red.jpg" alt=""  width="50%" height="50%">
+                    </center>
+                    
+                   </TD>
+
+                   <TD rowspan="2"  class="col-md-1">
+
+                   </TD>
+
+
+                   <TD class="col-md-5">  
+                <div  style=" background-color: #8b846ecf; padding: 10%; border-radius: 5%;">
+                          
+                    <form  >
+                            <div class="form-group" >
+                              <label for="exampleInputEmail1">Email </label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder=" email">
+                              <br>
+                             
+                            </div>
+                            <div class="form-group">
+                              <label for="exampleInputPassword1">Contraseña</label>
+                              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                              <hr>
+                            </div>
+                            <div class="form-check">
+                              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                              <label class="form-check-label" for="exampleCheck1">Aceptar</label>
+                            </div>
+                            <button type="submit" class="btn btn-secondary">Acceder</button>
+                          </form>
+                        </div>
+                    
+                
+                
+                </TD>
+               
+            </TR>
+            
+            </table>
+
+
         </div>
         
+
+        
+
+            
+        
+        
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 </body>
 </html>
