Se agregan las tablas de contenido y busqueda

--- a/css/home.css
+++ b/css/home.css
@@ -14,6 +14,17 @@ vertical-align: middle;
 font-size:20px;
 }
 
+.pri{
+  color: rgb(84, 54, 14);
+}
+table, th, td {
+  border:px solid rgb(0, 0, 0);  
+  border-collapse: collapse;
+padding: 12px;
+text-align: center;
+
+}
+
 .sub{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
