--- a/templates/home.html
+++ b/templates/home.html
@@ -8,26 +8,16 @@
     <link rel="shortcut icon" href="/img/tlatelolco.png">
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/stilos.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</head>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+   </head>
 <body>
     
-    <style>
-        .pri{
-            color: rgb(84, 54, 14);
-        }
-        table, th, td {
-            border:px solid rgb(0, 0, 0);
-            border-collapse: collapse;
-padding: 12px;
-text-align: center;
 
-          }
-          </style>
+    <div class="trabajo" id="trabajo">
 
-    <div class="trabajo">
-        <div class="container-fluid">
+        <div class="container-fluid header">
             <div class="row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-light bg-light justify-content-between">
@@ -40,49 +30,83 @@ text-align: center;
                     </div>
 
                 </div>
-        
-                
 
                     <H3>Espacio para trabajar</H3>
+  <div class="modal1">
+<!-- Button to Open the Modal -->
 
-                      
+  
+  <!-- The Modal -->
+  <div class="modal fade" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">SUBCOORDINACIONES</h4>
+          
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+  
+        <!-- Modal body -->
+        <div class="modal-body">
+
+       
+
+
+        </div>
+  
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+        </div>
+  
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <div class="container" id="tabla1">
+    <input class="form-control" id="myInput" type="text" placeholder="BUSCAR">
+    <br>
+    <table  class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th>USUARIOS</th>
+          <th>AREA</th>
+          <th>CANTIDAD</th>
+        </tr>
+      </thead>
+      <tbody id="myTable">
+        <tr>
+          <td>USUARIO1</td>
+          <td>LINEA1</td>
+          <td>72</td>
+        </tr>
+        <tr>
+          <td>USUARIO2</td>
+          <td>LINEA2</td>
+          <td>987</td>
+        </tr>
+        <tr>
+          <td>USUARIO3</td>
+          <td>LINEA3</td>
+          <td>77</td>
+        </tr>
+        <tr>
+          <td>USUARIO4</td>
+          <td>LINEA4</td>
+          <td>876</td>
+        </tr>
+      </tbody>
+    </table>
+    
+    <p>RESULTADOS RECIENTES</p>
+  </div>
+  
+
+
                     
-                      
-                      <table class="table table-hover table-secondary " style="width:100%" >
-                        <tr >
-
-                        
-                          <th colspan="3" class="pri table-secondary">DOCUMENTOS RECIBIDOS</th>
-                           
-                      
-                        </tr>
-                        <tr class="" >
-                          <th>Usuarios</th>
-                          <th>Area</th>
-                          <th>Cantidad</th>
-                        </tr>
-                        <tr>
-                          <td>Usuario 1</td>
-                          <td>Linea 1</td>
-                          <td> <a href="#">56</a> </td>
-                        </tr>
-                        <tr>
-                          <td>Usuario 2</td>
-                          <td>Linea 2</td>
-                          <td><a href="#">6</a></td>
-                        </tr>
-                        <tr>
-                            <td>Usuario 3</td>
-                            <td>Linea 3</td>
-                            <td><a href="#">5</a></td>
-                          </tr>
-                          <tr>
-                            <td>Usuario 4</td>
-                            <td>Linea 4</td>
-                            <td><a href="#">3</a></td>
-                          </tr>
-                      </table>
-                      
                 </div>
         </div>
         </div>
@@ -94,9 +118,9 @@ text-align: center;
     <nav class="main-menu">
     <ul>
         <li>
-            <a href="/templates/navar.html">
+            <a href="/templates/home.html">
                 <i class="fa fa-2x">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+                <svg  width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
                     <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
                   </svg>
@@ -107,20 +131,23 @@ text-align: center;
             </a>
           
         </li>
-        <li class="has-subnav">
+        <li onclick="tablass()" class="has-subnav" data-bs-toggle="modal" data-bs-target="#myModal" >
             <a href="#">
                 <i class="fa  fa-2x">
                     <svg  width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
                         <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                       </svg>
                 </i>
-                <span class="nav-text">
+                <span class="nav-text" >
                     Mi cuenta
+                    
+
+  
                 </span>
             </a>
             
         </li>
-        <li class="has-subnav">
+        <li class="has-subnav" onclick="tablas()">
             <a href="#">
                <i class="fa  fa-2x">
                 <svg  width="16" height="16" fill="currentColor" class="bi bi-folder-fill" viewBox="0 0 16 16">
@@ -133,8 +160,8 @@ text-align: center;
             </a>
             
         </li>
-        <li class="has-subnav">
-            <a href="#">
+        <li class="has-subnav" >
+            <a href="#" >
                <i class="fa  fa-2x">
                 <svg  width="16" height="16" fill="currentColor" class="bi bi-file-earmark-richtext-fill" viewBox="0 0 16 16">
                     <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zM7 6.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0zm-.861 1.542 1.33.886 1.854-1.855a.25.25 0 0 1 .289-.047l1.888.974V9.5a.5.5 0 0 1-.5.5H5a.5.5 0 0 1-.5-.5V9s1.54-1.274 1.639-1.208zM5 11h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1zm0 2h3a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1z"/>
@@ -147,7 +174,7 @@ text-align: center;
            
         </li>
         <li>
-            <a href="#">
+            <a href="/templates/envio.html">
                 <i class="fa  fa-2x">
                     <svg  width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right-square-fill" viewBox="0 0 16 16">
                         <path d="M14 0a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12zM5.904 10.803 10 6.707v2.768a.5.5 0 0 0 1 0V5.5a.5.5 0 0 0-.5-.5H6.525a.5.5 0 1 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 .707.707z"/>
@@ -190,6 +217,10 @@ text-align: center;
     </ul>
 </nav>
 </div>
-
+<script src="/js/home.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery-3.3.1.slim.min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/prueba.js"></script>
 </body>
 </ht
