--- a/templates/index.html
+++ b/templates/index.html
@@ -9,98 +9,63 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/stilos.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/stilos.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-secondary ">
-                     
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="navbar-toggler-icon"> </span>
-                       
-                    </button><img src="/img/STC_Metro.webp" alt="" width="20%">  <a class="navbar-brand"  href="#">   Mis Documentos</a>
-                    
-                    <div  class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                 <a class="nav-link" style="text-align:right"  href="#">Emviar A<span class="sr-only">(Actual)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                 <a class="nav-link" href="#">Salir</a>
-                            </li>
-                            
-                        </ul>
-                       
-                    </div>
-                </nav>
-                </div>
-
-
                 
-            </div>
-            <div class="container-fluid">
-        
-<BR></BR>
-            <table>
-                <TR>
-                    <TD rowspan="2"  class="col-md-6">
-                 
-                      <<div  class="jumbotron jumbotron-fluid" >
-                        
-                       <center>
-                        <h4 >INFORMACION </h4>
-                        <img src="/img/red.jpg" alt=""  width="50%" height="50%">
-                    </center>
-                    
-                   </TD>
+                            <div class="row g-0">
+                              <div class="col-md-6 col-lg-5 d-none d-md-block">
+                                <img src="/img/tlatelolco.png"
+                                  alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                              </div>
+                              <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                                <div class="card-body p-4 p-lg-5 ">
+                  
+                                  <form>
+                  
+                                    <div class="d-flex align-items-center mb-3 pb-1">
+                                      <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                                      <span class="h1 fw-bold mb-0">I
 
-                   <TD rowspan="2"  class="col-md-1">
-
-                   </TD>
-
-
-                   <TD class="col-md-5">  
-                <div  style=" background-color: #8b846ecf; padding: 10%; border-radius: 5%;">
-                          
-                    <form  >
-                            <div class="form-group" >
-                              <label for="exampleInputEmail1">Email </label>
-                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder=" email">
-                              <br>
-                             
+                                        <img src="/img/STC_Metro.webp" width="300px" alt="">
+                                      </span>
+                                    </div>
+                  
+                                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Ingresar cuenta de usuario</h5>
+                  
+                                    <div class="form-outline mb-4">
+                                      <input type="email" id="mail" class="form-control form-control-lg" />
+                                      <label class="form-label" for="form2Example17">Usuario</label>
+                                    </div>
+                  
+                                    <div class="form-outline mb-4">
+                                      <input type="password" id="pass" class="form-control form-control-lg" />
+                                      <label class="form-label" for="form2Example27">Contraseña</label>
+                                    </div>
+                  
+                                    <div  class="pt-1 mb-4">
+                                        <a class="btn btn-dark  btn-block"  type="button" href="/templates/home.html"> INGRESAR</a>
+                                      
+                                    </div>
+                  
+                                
+                                  </form>
+                  
+                                </div>
+                              </div>
                             </div>
-                            <div class="form-group">
-                              <label for="exampleInputPassword1">Contraseña</label>
-                              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                              <hr>
-                            </div>
-                            <div class="form-check">
-                              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                              <label class="form-check-label" for="exampleCheck1">Aceptar</label>
-                            </div>
-                            <button type="submit" class="btn btn-secondary">Acceder</button>
-                          </form>
+                          </div>
                         </div>
+                      </div>
                     
-                
-                
-                </TD>
-               
-            </TR>
-            
-            </table>
-
-
-        </div>
-        
-
-        
-
-            
-        
-        
-    </div>
+                  </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
