--- a/templates/home.html
+++ b/templates/home.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema METRO</title>
-    <link rel="shortcut icon" href="/img/tlatelolco.png">
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/stilos.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="/MetroCDMX/img/tlatelolco.png">
+    <link rel="stylesheet" href="/MetroCDMX/css/home.css">
+    <link rel="stylesheet" href="/MetroCDMX/css/stilos.css">
+    <link rel="stylesheet" href="/MetroCDMX/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
    </head>
@@ -21,11 +21,11 @@
             <div class="row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-light bg-light justify-content-between">
-                        <img src="/img/STC_Metro.webp" width="20%" alt="">
+                        <img src="/MetroCDMX/img/STC_Metro.webp" width="20%" alt="">
 
                         <p class="navbar-brand sub" >SUBCOORDINACIONES TLATELOLCO</P>
 
-                        <img src="/img/tlatelolco.png" width="70" alt="">
+                        <img src="/MetroCDMX/img/tlatelolco.png" width="70" alt="">
                       </nav>
                     </div>
 
@@ -223,7 +223,7 @@
     <nav class="main-menu">
     <ul>
         <li>
-            <a href="/templates/home.html">
+            <a href="/MetroCDMX/templates/home.html">
                 <i class="fa fa-2x">
                 <svg  width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
@@ -279,7 +279,7 @@
            
         </li>
         <li>
-            <a href="/templates/envio.html" >
+            <a href="/MetroCDMX/templates/envio.html" >
                 <i class="fa  fa-2x">
                     <svg  width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right-square-fill" viewBox="0 0 16 16">
                         <path d="M14 0a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12zM5.904 10.803 10 6.707v2.768a.5.5 0 0 0 1 0V5.5a.5.5 0 0 0-.5-.5H6.525a.5.5 0 1 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 .707.707z"/>
@@ -322,10 +322,10 @@
     </ul>
 </nav>
 </div>
-<script src="/js/home.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/jquery-3.3.1.slim.min.js"></script>
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/prueba.js"></script>
+<script src="/MetroCDMX/js/home.js"></script>
+    <script src="/MetroCDMX/js/bootstrap.min.js"></script>
+    <script src="/MetroCDMX/js/jquery-3.3.1.slim.min.js"></script>
+    <script src="/MetroCDMX/js/popper.min.js"></script>
+    <script src="/MetroCDMX/js/prueba.js"></script>
 </body>
 </ht
