--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/stilos.css">
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/stilos.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/MetroCDMX/css/stilos.css">
+    <link rel="stylesheet" href="/MetroCDMX/css/home.css">
+    <link rel="stylesheet" href="/MetroCDMX/css/stilos.css">
+    <link rel="stylesheet" href="/MetroCDMX/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
@@ -22,7 +22,7 @@
                 
                             <div class="row g-0">
                               <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                <img src="/img/tlatelolco.png"
+                                <img src="/MetroCDMX/img/tlatelolco.png"
                                   alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
                               </div>
                               <div class="col-md-6 col-lg-7 d-flex align-items-center">
@@ -34,7 +34,7 @@
                                       <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                                       <span class="h1 fw-bold mb-0">I
 
-                                        <img src="/img/STC_Metro.webp" width="300px" alt="">
+                                        <img src="/MetroCDMX/img/STC_Metro.webp" width="300px" alt="">
                                       </span>
                                     </div>
                   
@@ -51,7 +51,7 @@
                                     </div>
                   
                                     <div  class="pt-1 mb-4">
-                                        <a class="btn btn-dark  btn-block"  type="button" href="/templates/home.html"> INGRESAR</a>
+                                        <a class="btn btn-dark  btn-block"  type="button" href="/MetroCDMX/templates/home.html"> INGRESAR</a>
                                       
                                     </div>
                   
