--- a/css/home.css
+++ b/css/home.css
@@ -34,6 +34,7 @@ position: relative;
 }
 
 .main-menu {
+  position:relative;
 background:#8d8a27;
 border-right:1px solid #e5e5e5;
 position:absolute;
@@ -174,3 +175,20 @@ a {
     color: #CDFEAA;
     border-radius: 5px;
   }
+
+  html {
+  min-height: 100%;
+  position: relative;
+}
+body {
+  margin: 0;
+  margin-bottom: 40px;
+}
+footer {
+  background-color: rgb(168, 88, 88);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  color: white;
+}
