se agrega escrol

--- a/css/home1.css
+++ b/css/home1.css
@@ -200,3 +200,11 @@ footer {
   background: #fff;
   overflow: auto;
   }
+  .trabajo1 {
+    float: right;
+    background: #ffffff;
+    width: 1070px;
+    height: 550px;
+    background: #fff;
+    overflow: auto;
+    }
