--- a/css/home1.css
+++ b/css/home1.css
@@ -7,8 +7,8 @@ font-size: 2em;
 .fa {
 position: relative;
 display: table-cell;
-width: 60px;
-height: 66px;
+inline-size: 60px;
+block-size: 66px;
 text-align: center;
 vertical-align: middle;
 font-size:40px;
@@ -18,10 +18,10 @@ font-size:40px;
   color: rgb(84, 54, 14);
 }
 table, th, td {
-  border:px solid rgb(0, 0, 0);  
+  border:px solid rgb(39, 1, 1);  
   border-collapse: collapse;
 padding: 12px;
-text-align: center;
+
 
 }
 
@@ -36,13 +36,13 @@ position: relative;
 .main-menu {
   position:relative;
 background:#8d8a27;
-border-right:1px solid #e5e5e5;
+border-inline-end:1px solid #e5e5e5;
 position:absolute;
-top:0;
-bottom:0;
-height:100%;
-left:0;
-width:200px;
+inset-block-start:0;
+inset-block-end:0;
+block-size:100%;
+inset-inline-start:0;
+inline-size:200px;
 overflow:hidden;
 -webkit-transition:width .05s linear;
 transition:width .05s linear;
@@ -57,7 +57,7 @@ margin:7px 0;
 .main-menu li {
 position:relative;
 display:block;
-width:250px;
+inline-size:250px;
 }
 
 .main-menu li>a {
@@ -78,8 +78,8 @@ transition:all .1s linear;
 .main-menu .nav-icon {
 position:relative;
 display:table-cell;
-width:60px;
-height:36px;
+inline-size:60px;
+block-size:36px;
 text-align:center;
 vertical-align:middle;
 font-size:18px;
@@ -89,14 +89,14 @@ font-size:18px;
 position:relative;
 display:table-cell;
 vertical-align:middle;
-width:190px;
+inline-size:190px;
   font-family: 'Titillium Web', sans-serif;
 }
 
 .main-menu>ul.logout {
 position:absolute;
-left:0;
-bottom:0;
+inset-inline-start:0;
+inset-block-end:0;
 }
 
 .no-touch .scrollable.hover {
@@ -131,10 +131,10 @@ background-color:#e8e820;
 }
 
 .trabajo {
-float: right;
+float: inline-end;
 background: #ffffff;
-width: 81%;
-height: 94%;
+inline-size: 81%;
+block-size: 94%;
 }
 @font-face {
   font-family: 'Titillium Web';
@@ -159,13 +159,13 @@ a {
   }
   
   a:focus {
-    border-bottom: 1px solid;
+    border-block-end: 1px solid;
     background: #c4cd1e;
     border-radius: 5px;
   }
   
   a:hover {
-    border-bottom: 1px solid;
+    border-block-end: 1px solid;
     background: #d5a229;
     border-radius: 5px;
   }
@@ -177,34 +177,34 @@ a {
   }
 
   html {
-  min-height: 100%;
+  min-block-size: 100%;
   position: relative;
 }
 body {
   margin: 0;
-  margin-bottom: 40px;
+  margin-block-end: 40px;
 }
 footer {
   background-color: rgb(168, 88, 88);
   position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 40px;
+  inset-block-end: 0;
+  inline-size: 100%;
+  block-size: 40px;
   color: white;
 }
 .trabajo1 {
-  float: right;
+  float: inline-end;
   background: #ffffff;
-  width: 1070px;
-  height: 550px;
+  inline-size: 1070px;
+  block-size: 550px;
   background: #fff;
   overflow: auto;
   }
   .trabajo1 {
-    float: right;
+    float: inline-end;
     background: #ffffff;
-    width: 1070px;
-    height: 550px;
+    inline-size: 1070px;
+    block-size: 550px;
     background: #fff;
     overflow: auto;
     }
